# ibxtac

./: .env.sample  .gitignore  pyproject.toml  requirements.txt  typescript
.claude/commands/archives/: prime.md
.claude/commands/init/: check_env.md  install.md  prime.md  set_up.md
.claude/commands/plan/: feature.md  tws_feature .md  tws_feature.md
.claude/commands/sdc/: sdc01_create_feature.md  sdc02_test_tws.md
.claude/commands/test/: req_curr_time.md  test.md
.claude/commands/test/e2e/: req_curr_time.md  test_reqCurrTime.md  test_tws_connection.md
.claude/plan_format/: feature_build_plan.md  feature_test_plan.md
app/backend/: __init__.py  main.py  models.py
app/backend/routers/: __init__.py  tws.py
app/backend/tests/: __init__.py  test_tws.py
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: App.tsx  index.css
app/frontend/src/components/: TimeRequest.tsx
app/frontend/src/lib/: api.ts
app/frontend/src/types/: api.ts
app/server/: .env.sample
app/server/tests/: __init__.py
app/tws/: __init__.py  client.py  models.py  tws_app.py  tws_client.py
app/tws/tests/: __init__.py  test_client.py  test_tws_client.py
scripts/: install_ibapi.sh  start_app.py  start_backend.py  start_tws.sh
specs/features/: issue-01-adw-01-build-req_curr_time.md  issue-01-adw-01-test-req_curr_time.md  issue-01-adw-adw-01-basic_tws_app.md
templates/: feature_build_plan.md
tmp/: tmp.md
